# about

./: PKGBUILD  README.md
src/: meson.build  modules.json
src/about_axos/: about_axos.gresource.xml  about_axos.in  main.py  meson.build  window.ui
src/data/: com.axos-project.about_axos.appdata.xml.in  com.axos-project.about_axos.desktop.in  com.axos-project.about_axos.gschema.xml  meson.build
src/data/icons/: meson.build
